<resources>
    <string name="app_name">TUHub</string>

    <!-- Strings related to login -->
    <string name="prompt_email">AccessNet Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_main">TUHub</string>
    <string name="title_courses">Courses</string>
    <string name="title_marketplace">Marketplace</string>
    <string name="title_maps">Maps</string>
    <string name="title_news">News</string>
    <string name="title_more">More</string>
    <string name="search_title">Search</string>
    <string name="noResults">No Results</string>
    <string name="remember_me">Remember Me</string>
    <string name="remember_me_message">Login credentials may be exposed if you have rooted your device.</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="logout">Log Out</string>
    <string name="you_must_be_logged_in">You must be logged in to use this feature.</string>
    <string name="login">Log In</string>
    <string name="log_in_guest">Log in as Guest</string>
    <string name="userInfo">userInfo</string>

    <!-- Calendar strings -->
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thurs">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="current_date">Current Date</string>
    <string name="username_key">username</string>
    <string name="password_key">password</string>
    <string name="user_id_key">userId</string>

    <!-- TUNews Strings -->
    <string name="temple">TU News</string>
    <string name="filter">Filter</string>
    <string name="OK">OK</string>
    <string name="ArtandCulture">Art &amp; Culture</string>
    <string name="Athletics">Athletics</string>
    <string name="CampusNews">Campus News</string>
    <string name="CommunityEngagement">Community Engagement</string>
    <string name="GlobalTemple">Global Temple</string>
    <string name="Research">Research</string>
    <string name="StaffFaculty">Staff &amp; Faculty</string>
    <string name="StudentSuccess">Student Success</string>
    <string name="Sustainability">Sustainability</string>
    <string name="Temple2020">Temple 20/20</string>
    <string name="ComputerLabs">Computer Labs</string>
    <string name="SystemStatus">System Status</string>

    <!-- TUMarketplace Strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_title">Product Title</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="insert_product">Insert Product</string>
    <string name="price">Price</string>
    <string name="add_product">Add Product</string>
    <string name="add_image">Add Image</string>
    <string name="submit">Submit</string>
    <string name="take_picture">Take Picture</string>
    <string name="error_field_too_long">Max Length: 2000 characters. Currently:</string>
    <string name="error_invalid_dollar_amount">Invalid dollar amount.</string>
    <string name="close">Close</string>
    <string name="error_too_many_pics">You may only upload up to 10 images for a listing.</string>
    <string name="Products">Products</string>
    <string name="Jobs">Jobs</string>
    <string name="Personals">Personals</string>
    <string name="userProducts">My Products</string>
    <string name="userJobs">My Jobs</string>
    <string name="userPersonals">My Personals</string>
    <string name="newlisting">New Listing</string>
    <string name="hourlyrate">Hourly Rate</string>
    <string name="submitted">Submitted</string>
    <string name="submitting">Submitting</string>
    <string name="listing_published">Listing Published</string>
    <string name="image_upload_error">Error uploading image</string>
    <string name="error_publishing">Error Publishing</string>
    <string name="loading">Loading...</string>
    <string name="in_marketplace_key">isInMarketplace</string>
    <string name="add_phone_title">Add a Phone Number?</string>
    <string name="add_phone_body">If you post listings on the marketplace, some users may want to contact you by phone. If you would rather not provide your phone number, users will still be able to respond to your listings via your Temple email address.</string>
    <string name="add_phone_number">Add Number</string>
    <string name="no_thanks">No Thanks</string>
    <string name="phone_number">Phone Number (numbers only)</string>
    <string name="phone_number_error">Please enter numbers only</string>
    <string name="invalid_length">Invalid Length</string>
    <string name="deactivated">Unavailable</string>
    <string name="activated">Available</string>
    <string name="update">Update</string>
    <string name="loading_image">Loading Image </string>
    <string name="posted_by">Posted By:</string>
    <string name="price_input">Price:</string>
    <string name="start_date">Start Date:</string>
    <string name="location">Location:</string>
    <string name="hours_per_week">Hours Per Week:</string>
    <string name="pay">Pay:</string>
    <string name="description_input">Description:</string>
    <string name="contact_listing_owner">Contact Listing Owner</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="default_subject">TUHub Marketplace Listing -</string>
    <string name="default_message_intro">Hello,\nI am interested in your listing for</string>
    <string name="default_message_outro">I would greatly appreciate it if you could provide me with more information regarding the listing.\nBest,\n</string>
    <string name="date_posted">Date Posted:</string>


    <!-- Maps Strings -->
    <string name="google_android_map_api_key">AIzaSyAlmlxd6P-cT2AN0XYdV_n5wZ0wxziyoQA</string>
    <string name="change_campus">Change Campus</string>
    <string name="SetDefault">Set As Default</string>
    <string name="saved_map">Main</string>
    <string name="saved_default_map">Main</string>
    <string name="my_courses">My Courses</string>
    <string name="export_courses">Export Courses</string>
    <string name="NoMeetingLocation">No Meeting Location</string>
    <string name="food_truck_name">Food Truck Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="rating">Rating</string>
    <string name="closed">Closed</string>
    <string name="directions">Directions</string>
    <string name="exportError">Error exporting courses</string>

</resources>
