<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_courses"
        android:icon="@drawable/ic_school"
        android:title="@string/title_courses" />

    <item
        android:id="@+id/navigation_marketplace"
        android:icon="@drawable/ic_shopping_basket"
        android:title="@string/title_marketplace" />

    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/ic_map"
        android:title="@string/title_maps" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_newspaper"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more_horiz"
        android:title="@string/title_more" />

</menu>