<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#97686868"
    android:id="@+id/greyarea"
    android:orientation="vertical"
    android:clickable="true">


    <ScrollView

        android:orientation="vertical"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true">
    <LinearLayout
        android:id="@+id/filterselections"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white"
        >

        <CheckBox
        android:id="@+id/Athleticsbox"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/Athletics"
        android:textSize="18sp"
        />
        <CheckBox
            android:id="@+id/CampusNewsbox"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/CampusNews"
            android:textSize="18sp"
            />
        <CheckBox
            android:id="@+id/CommunityEngagementbox"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/CommunityEngagement"
            android:textSize="18sp"
            />
        <CheckBox
            android:id="@+id/GlobalTemplebox"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/GlobalTemple"
            android:textSize="18sp"
            />
        <CheckBox
            android:id="@+id/Researchbox"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/Research"
            android:textSize="18sp"
            />
        <CheckBox
            android:id="@+id/StaffandFacultybox"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/StaffFaculty"
            android:textSize="18sp"
            />
        <CheckBox
            android:id="@+id/StudentSuccessbox"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/StudentSuccess"
            android:textSize="18sp"
            />
        <CheckBox
            android:id="@+id/Sustainabilitybox"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/Sustainability"
            android:textSize="18sp"
            />
        <CheckBox
            android:id="@+id/Temple2020box"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/Temple2020"
            android:textSize="18sp"
            />


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/utton"
                        >

            <TextView
                android:id="@+id/okbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OK"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
               />
        </RelativeLayout>
    </LinearLayout>
    </ScrollView>

</RelativeLayout>