
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="edu.temple.tuhub.InsertProductFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_product"
        android:textSize="30sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        android:labelFor="@+id/insert_product_title_input"/>
    <EditText
        android:id="@+id/insert_product_title_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="20sp"
        android:labelFor="@+id/insert_product_description_input"/>
    <EditText
        android:id="@+id/insert_product_description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="8"
        android:ems="10"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="20sp"
        android:labelFor="@+id/insert_product_price_input"/>
    <EditText
        android:id="@+id/insert_product_price_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
       />

    <HorizontalScrollView
        android:id="@+id/insert_product_image_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:id="@+id/insert_product_image_container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        </LinearLayout>

    </HorizontalScrollView>


                <Button
                    android:id="@+id/insert_product_add_image_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_image" />


    <Button
        android:id="@+id/insert_product_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <ProgressBar
        android:id="@+id/insert_product_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>


